+ command for toggling clipping plane
+ command for freezing view positions
+ added new ViewProvider for meshes with more than 100.000 triangles using SoFCMeshNode for optimizations
+ save/restore of view providers into/from a separate XML file in a project file
+ check if project file exists when loading from command line
+ using grid to speed up cutting algoritm for huge meshes
+ calculate inverse color of mesh color for open edges 
+ added project properties to App::Document
+ added material property class
+ allow to disable notification of property container when a property has changed its value
+ added dialog to show and set project information
+ start moving display relevant properties from DocumentObject (data) classes to the associated ViewProvider (view) classes
+ reimplemented dialogs DlgDisplayPropertiesImp and DlgMaterialPropertiesImp
+ added ViewProvider class for Python 
+ separate data and view properties and show in different tabs in the editor
+ new methods added to Gui::DocumentPy to get active object and object by name
+ add only required Inventor nodes to all ViewProvider subclasses and removed from ViewProviderDocumentObject
+ use an additional STL vector to preserve the creation order of objects
+ added a group class for document objects and its view provider
+ added PropertyPartShape to save/load shapes to/from a document
+ rename document member in SoFCSelection after a document has been renamed
+ Prepared for OCC 6.1: The modules 'AppMesh', 'AppPartGui', 'AppRaytracing' and 'AppRaytracingGui' need the module 'TKMesh.lib'
+ Added a method to XMLReader to get unsigned long from a string
+ Make several methods of BaseView const
+ Bug fixed in TreeView
+ Added new action classes for en/disabling selection and highlighting with their colors
+ Bug fixed when opening a project with the same file name
+ RFE 1450472 Clear selection of active document only
+ SoFCMeshOpenEdge shape node added to render the open edges of a mesh